// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PrintingInputs should render correctly for 4c printer module 1`] = `
<div>
  <div
    class="inputs"
  >
    <div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Halftone
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="halftoneSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="halftoneSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="halftoneSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="FM"
              >
                FM
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Speed
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="speedSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="speedSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="speedSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="60"
              >
                60
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Multi-pass
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="multipassSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="multipassSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="multipassSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="3"
              >
                3
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Pass Count
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            times
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="repeat"
            max="100"
            min="0"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrintingInputs should render correctly in advanced mode 1`] = `
<div>
  <div
    class="inputs"
  >
    <div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Saturation
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="ink"
            max="15"
            min="1"
            value="3"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Cyan
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="cRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Magenta
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="mRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Yellow
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="yRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Black
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="kRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Halftone
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="halftoneSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="halftoneSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="halftoneSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="FM"
              >
                FM
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Speed
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            mm/s
          </p>
          <p>
            precision: 
            1
          </p>
          <input
            data-testid="speed"
            max="100"
            min="0"
            value="60"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Multi-pass
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            times
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="multipass"
            max="10"
            min="1"
            value="3"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Pass Count
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            times
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="repeat"
            max="100"
            min="0"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrintingInputs should render correctly in simple mode 1`] = `
<div>
  <div
    class="inputs"
  >
    <div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Saturation
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="inkSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="inkSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="inkSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="Regular"
              >
                Regular
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Cyan
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="cRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Magenta
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="mRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Yellow
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="yRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
      <div
        class="field small"
      >
        <div
          class="label"
        >
          Black
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            %
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="kRatio"
            max="200"
            min="0"
            value="100"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Halftone
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="halftoneSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="halftoneSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="halftoneSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="FM"
              >
                FM
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Speed
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="speedSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="speedSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="speedSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="Regular"
              >
                Regular
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Multi-pass
        </div>
        <div
          class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
        >
          <div
            class="ant-select-selector"
          >
            <span
              class="ant-select-selection-wrap"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="multipassSelect_list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="multipassSelect_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="multipassSelect"
                  readonly=""
                  role="combobox"
                  style="opacity: 0;"
                  type="search"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-item"
                title="3"
              >
                3
              </span>
            </span>
          </div>
          <span
            aria-hidden="true"
            class="ant-select-arrow"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              aria-label="down"
              class="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <div
        class="field"
      >
        <div
          class="label"
        >
          Pass Count
        </div>
        <div
          class="input"
        >
          UnitInput: 
          <p>
            addonAfter: 
            times
          </p>
          <p>
            precision: 
            0
          </p>
          <input
            data-testid="repeat"
            max="100"
            min="0"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
